fix navbar collapsed menu on gallery and product pages

--- a/static/css/base_master.css
+++ b/static/css/base_master.css
@@ -880,7 +880,7 @@ box-shadow: 0px 5px 10px 0px #6c757d;
 	}
 
 	.btt-button-top {
-		bottom: 2.5rem;
+		bottom: 2.8rem;
 	}
 
 	.btt-button-top,
@@ -982,7 +982,7 @@ box-shadow: 0px 5px 10px 0px #6c757d;
 	}
 
 	.btt-button-top {
-		bottom: 3.25rem;
+		bottom: 3.50rem;
 	}
 
 	.btt-button-top,
@@ -1091,7 +1091,7 @@ box-shadow: 0px 5px 10px 0px #6c757d;
 	}
 
 	.btt-button-top {
-		bottom: 3.75rem;
+		bottom: 4rem;
 	}
 
 	.btt-button-top,
